--- a/style.scss
+++ b/style.scss
@@ -1,46 +1,23 @@
 
     @mixin mydefinition{
-    font-size: 20px;
     display: flex;
-    justify-content: center;
     align-items: center;
     justify-content: space-between;
     }
-    $mybg:  rgba(0, 0, 0, 0.912);
+    $mybg:  gray;
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    max-width: 100vw;
-    max-height: 100vh;
-    overflow: visible;
     font-family: Verdana, Tahoma, sans-serif;
-    @media screen and (max-width: 500px) {
-       max-width: 100%;
-       margin: auto;
-       height: auto; 
-    }
-    @media screen and (max-width: 800px) {
-        max-width: 100%;
-        margin: auto;
-        height: auto;
-    }
-    @media screen and (max-width: 1200px) {
-        max-width: 100%;
-        margin: auto;
-        height: auto;
-    }
-
 }
 #main-container{
-    background: linear-gradient(to right, magenta, teal, green, orangered);
+    background: linear-gradient(to right, aliceblue, aliceblue, aliceblue, aliceblue);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     margin: auto;
-    max-width: 100vw;
-    max-height: 500vh;
 
 }
 .loader-container{
@@ -74,43 +51,53 @@
     }
 }
 }
-header{
-    background: $mybg;
-    max-width: 100vw;
+.swiper-slide{
     width: 100%;
     height: auto;
-    @media screen and (max-width: 540px) {
-        width: 100%;
-        height: auto;
-        background-attachment: fixed;
-        position: fixed;
-        visibility: visible;
-        z-index: 10;
+}
+
+.swiper-wrapper h4{
+    position: absolute;
+    top: 20%;
+    left: 30%;
+    color: white;
+
+}
+header{
+    background-color: $mybg;
+    min-width: 100vw;
+    height: auto;
+    margin: auto;
+    @media screen and (max-width: 600px) {
+        min-width: 100%;
+        height: 30vh;
+        
     }
 
 }
 .container{
     @include mydefinition();
-    max-width: 100%;
+    max-width: 100vw;
     max-height: auto;
     margin: auto;
     .logo{
         width: 300px;
         height: 300px;
         border: 1px solid green;
-        border-radius: 100%;
+        border-radius: 50%;
         border-style: double;
         position: static;
         background: linear-gradient(to bottom, green, lightgreen, black);
-        margin: auto 40px;
+        margin-left: 10px; 
         box-shadow: 2px 2px 2px 3px green, -2px -2px 2px 3px green;
-        @media screen and (max-width: 760px) {
-            max-width: 100%;
-            height: auto;
-            margin: auto;
-            display: none;
-            font-size: small;
+        @media screen and (max-width: 600px) {
+            position: absolute;
+            opacity: 0.3;
+            top: -10%;
+            left: 20%;
+            transform: translate(20%, 20%);
         }
+        
         .p1{
             color: red;
             font-size: 15px;
@@ -142,7 +129,7 @@ header{
             right: 20px;
             top: 160px;
             text-align: center;
-            color: white;
+            color: black;
         }
         .p2{
             text-align: center;
@@ -152,7 +139,7 @@ header{
             left: 20px;
             right: 20px;
             width: fit-content;
-            color: white;
+            color: black;
         }
         .p4{
             text-align: center;
@@ -182,6 +169,8 @@ header{
                 
             }
         }
+
+        
     }
 
     .toggle-bars{
@@ -222,38 +211,17 @@ header{
     }
 }
     .navbar-items{
-        margin: auto -22%;
-        max-width: 100%;
+        margin: auto;
         font-variant: small-caps;
-        z-index: 80;
-        position: absolute;
-        top: 15%;
-        left: 25%;
-
-        @media screen and (max-width:540px) {
-            position: absolute;
-            top: 5%;
-            left: 25%;
-            z-index: 80;
-        }
-    
+      
+           
         ul{
             @include mydefinition();
-            position: relative;
-            left: 60%;
-            right: 40%;
-            @media screen and (max-width: 540px) {
+             @media screen and (max-width: 600px) {
                 display: none;
                 margin: auto;
-                padding-top: 30px;
-                z-index: 80;
-                line-height: 1.5;
                 background-color: $mybg;
-                width: 260px;
                 height: auto;
-                position: relative;
-                top: 0;
-                left: -30px;
 
 
             }
@@ -264,7 +232,7 @@ header{
                 a{
                     text-decoration: none;
                     padding: 20px;
-                    color: white;
+                    color: black;
                     opacity: 1;
                     &:hover{
                         cursor: pointer;
@@ -373,16 +341,17 @@ header{
     height: auto;
     background: (to right, magenta, teal, green, orangered);
     .swiper{
-        max-width: 600px;
-        height: 500px;
+        max-width: 400px;
+        height: 300px;
         .swiper-wrapper{
             @include mydefinition();
             width: auto;
             height: auto;
             margin: auto;
-            .swiper-slide{img{
-                width: 100%;
-                height: auto;
+            .swiper-slide{
+                img{
+                width: 400px;
+                height: 400px;
                 @media screen and (max-width: 900px) {
                     max-width: 100%;
                     height: auto;
@@ -414,15 +383,14 @@ header{
             text-align: center;
             font-size: 25px;
             margin: 10px auto;
-            color: antiquewhite;
-        }
+         }
         #believe{
             text-align: justify;
             margin: 10px 20px;
             font-size: 20px;
             text-indent: 50px;
             line-height: 1.5;
-            color: white;
+          
         }
         ul{
             margin: auto;
@@ -445,8 +413,7 @@ header{
         }
             li{
                 padding: 10px;
-                color: white;
-                list-style: none;
+               list-style: none;
                 margin: auto 15px;
                 
                 @media screen and (max-width: 540px) {
@@ -464,8 +431,7 @@ header{
     margin: 20px auto;
     padding: 10px;
         #mediap{
-            color: whitesmoke;
-            text-align: justify;
+           text-align: justify;
             max-width: 100%;
             text-indent: 50px;
             margin: 10px 20px;
@@ -494,7 +460,6 @@ header{
         background-color: green;
         border-radius: 50%;
         position: relative;
-        color: white;
         right: -20px;
         font-size: 25px;
         font-weight: bold;
@@ -527,13 +492,12 @@ header{
         text-align: justify;
         font-size: 25px;
         margin: auto 20px;
-        color: white;
+
     }
     address{
         margin: 10px 20px;
         line-height: 1.4;
         font-size: 18px;
-        color: white;
     }
     
 }
